--- a/draft/background.tex
+++ b/draft/background.tex
@@ -220,6 +220,9 @@ denoted $\vocab(\varphi)$.
 For formulas $\varphi_0, \ldots, \varphi_n, \varphi \in \formulas{X}$,
 the fact that $\varphi_0, \ldots, \varphi_n$ \emph{entail} $\varphi$
 is denoted $\varphi_0, \ldots, \varphi_n \entails \varphi$.
+%
+There is a formula $\true \in \formulas{\emptyset}$ such that each
+sequence of formulas entails $\true$.
 
 % Define replacement and substitution:
 For all vectors of variables $X = [ x_0, \ldots, x_n ]$ and
